# rs-arxiv-batch

./: .gitignore  Cargo.toml
arxiv-batch/: Cargo.toml  README.md
arxiv-batch/src/: ai.rs  cache.rs  collector.rs  common.rs  main.rs  reporter.rs  tests.rs  utils.rs
arxiv-batch/src/instructions/: instruction_1.txt
