[package]
name = "arxiv-batch"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.95"
arxiv-tools = "1.1.2"
chrono = { version = "0.4.39", features = ["arbitrary", "serde"] }
clap = { version = "4.5.23", features = ["derive"] }
dotenvy = "0.15.7"
fxhash = "0.2.1"
indicatif = "0.17.9"
keyword-tools = "0.1.0"
notion-tools = "0.1.7"
openai-tools = "0.1.2"
rsrpp = "1.0.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
ss-tools = "0.2.6"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"

[package.metadata.release]
tag = true
